--- a/frontend/templates/frontend/dialobild-app.html
+++ b/frontend/templates/frontend/dialobild-app.html
@@ -3,14 +3,12 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Dialobild</title>>
-<script defer="defer" src="{% static 'frontend/js/dialobild-app.js' %}">
-</script>
+    <title>Dialobild</title>
+<script defer="defer" src="{% static 'frontend/js/dialobild-app.js' %}"></script>
 <link  rel="stylesheet" href="{% static 'frontend/css/dialobild-app.css' %}">
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root">
-</div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 </body>
 </html>
