- Добавлена иконка - Баг с RAW созданием решен

--- a/frontend/templates/frontend/dialobild-app.html
+++ b/frontend/templates/frontend/dialobild-app.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dialobild</title>
+    <link rel="icon" href="{% static 'frontend/svg/icon.svg' %}" />
 <script defer="defer" src="{% static 'frontend/js/dialobild-app.js' %}"></script>
 <link  rel="stylesheet" href="{% static 'frontend/css/dialobild-app.css' %}">
 </head>
